# Age-Gender-OpenCV-Raspberry-Pi-4_250307

./: .gitignore  CMakeLists.txt
